saving to work on the go

--- a/hometest.html
+++ b/hometest.html
@@ -17,14 +17,15 @@
    <nav class="navbar">
         <div style="position:absolute; left: 0;">
             <ul>
-                <li><a href="/html/" class="navbar-text">Originale</a></li>
-                <li><a href="/css/" class="navbar-text">Photos</a></li>
-                <li><a href="/js/" class="navbar-text">Imprimés</a></li>
-                <li><a href="/jquery/" class="navbar-text">Catégorie</a></li>
+                <li><a href="/html/" class="navbar-text">Biographie</a></li>
+                <li><a href="/css/" class="navbar-text">Galerie</a></li>
+                <li><a href="/js/" class="navbar-text">Boutique</a></li>
+                <li><a href="/jquery/" class="navbar-text">Contact</a></li>
+                <li><a href="/html/" class="navbar-text">Blog</a></li>
             </ul>
         </div>
         <div style="width: 100%; text-align: center;">
-            <h1 class="name-header navbar-text">Selene</h1>
+            <h1 class="name-header navbar-text">Maral</h1>
         </div>
         <div style="position:absolute;right: 0;">
             <ul>
@@ -34,6 +35,37 @@
             </ul>
         </div>
     </nav> 
+
+    <div class="container">
+        <div class="card" style="width: 18rem;">
+            <img src="dieu.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><i>Oeil de dieu</i></h5>
+              <p class="card-text"><a href="#">#bleu</a> </p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="dieu.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Oeil de dieu</h5>
+              <p class="card-text"><a href="#">#bleu</a> </p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="dieu.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Oeil de dieu</h5>
+              <p class="card-text"><a href="#">#bleu</a> </p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="dieu.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Oeil de dieu</h5>
+              <p class="card-text"><a href="#">#bleu</a> </p>
+            </div>
+          </div>
+    </div>
 </div>
 </body>
 </html>
