--- a/hometest.html
+++ b/hometest.html
@@ -13,12 +13,11 @@
 </head>
 
 <body>
-<div class="container-fluid">
-   <nav class="navbar">
+    <nav class="navbar">
         <div style="position:absolute; left: 0;">
             <ul>
                 <li><a href="/html/" class="navbar-text">Biographie</a></li>
-                <li><a href="/css/" class="navbar-text">Galerie</a></li>
+                <li><a href="#" class="navbar-text">Galerie</a></li>
                 <li><a href="/js/" class="navbar-text">Boutique</a></li>
                 <li><a href="/jquery/" class="navbar-text">Contact</a></li>
                 <li><a href="/html/" class="navbar-text">Blog</a></li>
@@ -36,36 +35,95 @@
         </div>
     </nav> 
 
-    <div class="container">
-        <div class="card" style="width: 18rem;">
-            <img src="dieu.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title"><i>Oeil de dieu</i></h5>
-              <p class="card-text"><a href="#">#bleu</a> </p>
-            </div>
+<div class="container-fluid"> 
+  <div class="carousel-container">
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://cdn.eventfinda.co.nz/uploads/events/transformed/1180171-527593-34.jpg?v=2" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="dieu.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Oeil de dieu</h5>
-              <p class="card-text"><a href="#">#bleu</a> </p>
-            </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://cdn.shopify.com/s/files/1/0073/8148/3605/articles/Claude-Monet-San-Giorgio-Maggiore-at-Dusk_2048x.jpg?v=1556745106" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="dieu.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Oeil de dieu</h5>
-              <p class="card-text"><a href="#">#bleu</a> </p>
-            </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://cdn.eventfinda.co.nz/uploads/events/transformed/1235054-550386-34.jpg?v=2" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
           </div>
-          <div class="card" style="width: 18rem;">
-            <img src="dieu.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Oeil de dieu</h5>
-              <p class="card-text"><a href="#">#bleu</a> </p>
-            </div>
-          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
+  </div>
 </div>
+  
+    <!--<div class="footer container-fluid">
+      <p>Links</p>
+    </div>-->
+    <footer class="page-footer font-small blue pt-4">
+        <!-- Footer Links -->
+        <div class="container-fluid text-center text-md-left">
+          <!-- Grid row -->
+          <div class="row">
+            <!-- Grid column 
+            <div class="col-md-6 mt-md-0 mt-3">
+               Content ->
+              <h5 class="text-uppercase">Contact</h5>
+              <p>Here you can use rows and columns to organize your footer content.</p>
+            </div>-->
+            <!-- Grid column -->
+            <hr class="clearfix w-100 d-md-none pb-3">
+            
+            <!-- Grid column -->
+            <div class="footer-links col-md-12 mb-md-0 mb-3">
+              <!-- Links 
+              <h5 class="text-uppercase">Réseaux sociaux</h5>-->
+              <ul class="footer-list">
+                <li>
+                  <a href="#!"><i class="fab fa-instagram fa-2x"></i></a>
+                </li>
+                <li>
+                  <a href="#!"><i class="fab fa-facebook-square fa-2x"></i></a>
+                </li>
+                <li>
+                  <a href="#!"><i class="fab fa-pinterest-square fa-2x"></i></a>
+                </li>
+
+              </ul>
+            </div>
+            <!-- Grid column -->
+          </div>
+          <!-- Grid row -->
+        </div>
+        <!-- Footer Links -->
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
+          <a href="https://github.com/ablin42"> ablin42</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
+      <!-- Footer -->
+
 </body>
 </html>
